support reseau et menu

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,13 +2,16 @@ CC = gcc
 CFLAGS = -Wall
 LDFLAGS = -lm
 RM = rm -f
-SRC = erreur.c main.c fichier.c stringTools.c chaine.c xfigTools.c
+SRC = erreur.c main.c fichier.c stringTools.c chaine.c xfigTools.c reseau.c menu.c
 OBJ = $(SRC:.c=.o)
 EXEC = main
 
+SRC_TEST =  erreur.c mainChaine.c fichier.c stringTools.c chaine.c xfigTools.c reseau.c menu.c
+OBJ_TEST = $(SRC_TEST:.c=.o)
+
 all: $(EXEC)
 
-.depend: $(SRC)
+.depend: $(SRC_TEST)
 	 $(CC) -MM $^ > $@
 
 -include .depend
@@ -19,10 +22,13 @@ all: $(EXEC)
 $(EXEC): $(OBJ)
 	$(CC) -o $@ $^ $(LDFLAGS)
 
+mainChaine: $(OBJ_TEST)
+	$(CC) -o $@ $^ $(LDFLAGS)
+
 clean:
-	$(RM) $(OBJ) .depend
+	$(RM) $(OBJ) .depend $(OBJ_TEST)
 
 mrproper:
-	$(RM) $(OBJ) $(EXEC) .depend
+	$(RM) $(OBJ) $(EXEC) .depend $(OBJ_TEST) mainChaine
 
 .PHONY: all clean mrproper
